test/frontend/fail/struct_as_value.osl
struct S { int a, b, c; };
shader bar() {
    (false ? S : S)(1, 2, 3);
}
